Convert to static site hosted on Now

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
   max-width: 900px;
   margin: 0 auto;
 }
+
   .header__title {
     text-transform: lowercase;
     color: #c00;
@@ -32,15 +33,18 @@ body {
     line-height: 1;
     margin-bottom: 0.75rem;
   }
+
     .header__title > span {
       color: #333;
     }
+
   .header__tagline {
     font-size: 1.5rem;
     color: #666;
     margin-top: 0;
     margin-bottom: 4rem;
   }
+
     @media screen and (max-width: 599px) {
       .header__tagline {
         margin-bottom: 2rem;
@@ -56,12 +60,14 @@ body {
   position: relative;
   transition: transform 0.25s ease-out;
 }
+
   @media screen and (min-width: 600px) {
     .photo {
       -webkit-animation: fadeUp 1.5s ease-in-out backwards;
               animation: fadeUp 1.5s ease-in-out backwards;
     }
   }
+
   @media screen and (max-width: 599px) {
     .photo {
       width: 100%;
@@ -70,36 +76,40 @@ body {
       pointer-events: none;
     }
   }
+
   .photo:hover {
     -webkit-transform: rotate(0deg) scale(1.25) !important;
             transform: rotate(0deg) scale(1.25) !important;
     z-index: 4 !important;
   }
+
   .photo > img {
     width: 100%;
   }
 
-.photo.first {
-  -webkit-transform: rotate(-3deg);
-          transform: rotate(-3deg);
-  z-index: 1;
-  left: 5%;
-}
-.photo.second {
-  -webkit-transform: rotate(-1deg);
-          transform: rotate(-1deg);
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
-  z-index: 2;
-}
-.photo.third {
-  -webkit-transform: rotate(2deg);
-          transform: rotate(2deg);
-  -webkit-animation-delay: 0.35s;
-          animation-delay: 0.35s;
-  z-index: 3;
-  right: 5%;
-}
+  .photo--first {
+    -webkit-transform: rotate(-3deg);
+            transform: rotate(-3deg);
+    z-index: 1;
+    left: 5%;
+  }
+
+  .photo--second {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+    -webkit-animation-delay: 0.7s;
+            animation-delay: 0.7s;
+    z-index: 2;
+  }
+
+  .photo--third {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+    -webkit-animation-delay: 0.35s;
+            animation-delay: 0.35s;
+    z-index: 3;
+    right: 5%;
+  }
 
 .bros-in {
   margin-top: 4rem;
